test/ui/test/lowering/invalid-super-or-topmost-in-use-declaration.stderr
error[E026]: path ‘super’ not allowed in this position
 --> ${TEST_FOLDER}/lowering/invalid-super-or-topmost-in-use-declaration.lushui:1:14
  |
1 | use foo.bar.(super.ban topmost self)
  |              ^^^^^
  |
 help: consider moving this path to a separate use-declaration

error[E026]: path ‘topmost’ not allowed in this position
 --> ${TEST_FOLDER}/lowering/invalid-super-or-topmost-in-use-declaration.lushui:1:24
  |
1 | use foo.bar.(super.ban topmost self)
  |                        ^^^^^^^
  |
 help: consider moving this path to a separate use-declaration

error: aborting due to 2 previous errors

