test/ui/test/lowering/invalid-super-or-topmost-in-use-declaration.lushui
;;; TEST fail check

use foo.bar.(super.ban topmost self)
